--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,24 @@
 {
-    "name": "drewjbartlett/wordpress-eloquent",
+    "name": "mallardduck/wordpress-eloquent",
     "description": "A Laravel wrapper for wordpress which turns all Wordpress models into Laravel Eloquent Models.",
     "keywords": ["wordpress", "eloquent", "laravel"],
-    "homepage": "https://github.com/drewjbartlett/wordpress-eloquent",
+    "homepage": "https://github.com/mallardduck/wordpress-eloquent",
     "support": {
-        "issues": "https://github.com/drewjbartlett/wordpress-eloquent/issues",
-        "source": "https://github.com/drewjbartlett/wordpress-eloquent"
+        "issues": "https://github.com/mallardduck/wordpress-eloquent/issues",
+        "source": "https://github.com/mallardduck/wordpress-eloquent"
     },
     "authors": [
+        {
+            "name": "Dan Pock",
+            "email": "self@danpock.me"
+        },
         {
             "name": "Drew J Bartlett",
             "email": "drewjbartlett@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
-        "php": ">=5.6.4",
+        "php": ">=7.0",
         "illuminate/database": "^5.4"
     },
     "autoload": {
@@ -23,5 +26,6 @@
             "WPEloquent\\": "WPEloquent/"
         }
     },
-    "license": "MIT"
+    "license": "MIT",
+    "minimum-stability": "dev"
 }
