--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,21 @@
         "php": ">=7.0",
         "illuminate/database": "^5.5"
     },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.0@dev"
+    },
     "autoload": {
         "psr-4": {
             "WPEloquent\\": "src/"
         }
+    },
+    "scripts": {
+        "phpcs": [
+            "./vendor/bin/phpcs --standard=PSR12 ./src"
+        ],
+        "cbf": [
+            "./vendor/bin/phpcbf --standard=PSR12 ./src"
+        ]
     },
     "replace": {
         "drewjbartlett/wordpress-eloquent": "0.2.*",
