--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "illuminate/database": "^5.5"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.0@dev"
+        "squizlabs/php_codesniffer": "^3.0@dev",
+        "phpcompatibility/php-compatibility": "*"
     },
     "autoload": {
         "psr-4": {
@@ -35,7 +36,9 @@
         ],
         "cbf": [
             "./vendor/bin/phpcbf --standard=PSR12 ./src"
-        ]
+        ],
+        "post-install-cmd": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility",
+        "post-update-cmd" : "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility"
     },
     "replace": {
         "drewjbartlett/wordpress-eloquent": "0.2.*",
