--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "illuminate/database": "^5.5"
+        "php": "^7.1.3",
+        "illuminate/database": "^5.7.10"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.0@dev",
