--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/database": "^5.7.10|^5.8|^6.0"
+        "illuminate/database": "^9.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.0@dev",
